Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/Quest_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Quest Enrollment</label>
    <pluralLabel>Quest Enrollments</pluralLabel>
    <nameField>
        <label>Quest Enrollment</label>
        <type>AutoNumber</type>
        <displayFormat>QE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>