Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
    <inlineHelpText>The date the learner completed this quest.</inlineHelpText>
</CustomField>