Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <label>Enrolled Date</label>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>The date the learner enrolled in this quest.</inlineHelpText>
</CustomField>