Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/fields/Progress_Count__c.field-meta.xml
<CustomField>
    <fullName>Progress_Count__c</fullName>
    <label>Progress Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Running count of qualifying actions towards quest completion.</inlineHelpText>
</CustomField>