Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/fields/Quest__c.field-meta.xml
<CustomField>
    <fullName>Quest__c</fullName>
    <label>Quest</label>
    <type>Lookup</type>
    <referenceTo>Quest__c</referenceTo>
    <relationshipLabel>Quest Enrollments</relationshipLabel>
    <relationshipName>Quest_Enrollment_Quests</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The quest this enrollment record belongs to.</inlineHelpText>
</CustomField>