Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/fields/Trailblazer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile__c</fullName>
    <label>Trailblazer Profile</label>
    <type>MasterDetail</type>
    <referenceTo>Trailblazer_Profile__c</referenceTo>
    <relationshipName>Quest_Enrollments</relationshipName>
    <relationshipLabel>Quest Enrollments</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
    <inlineHelpText>The Trailblazer profile this enrollment belongs to.</inlineHelpText>
</CustomField>