Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest_Enrollment__c/validationRules/Completed_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Completed'), ISBLANK(Completed_Date__c))</errorConditionFormula>
    <errorMessage>Completed Date is required when status is Completed.</errorMessage>
</ValidationRule>